Bugfixes and improvements (#12)
Co-authored-by: Daniil Shcherbakov